<resources>
    <string name="app_name">SecureOnlineSharing</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login">Login</string>
    <string name="username_hint">Enter username....</string>
    <string name="password_hint">Enter password....</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string-array name="access_rules">
        <item>Concurrent Only</item>
        <item>Concurrent with Video</item>

        <item>Face Authentication</item>


    </string-array>

    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="media_description_label">Description</string>
    <string name="media_owner_label">Owner</string>
    <string name="register_button_label">Register</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="password_confirm_label">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="media_title_label">Title</string>
    <string name="media_upload_button_label">Upload</string>
    <string name="media_picker_label">Tap to choose file</string>
    <string name="email_label">Email</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_invalid_message">Please enter a valid email address</string>
    <string name="phone_num_invalid">Enter a 10 digit number</string>
    <string name="pass_confirm_invalid">Two passwords do not match</string>
    <string name="name_invalid">name should only contain letters, spaces,hyphens</string>
    <string name="login_error_message">Login Unsuccessful</string>
    <string name="user_name_empty_message">User Name cannot be empty</string>
    <string name="password_empty_message">Password field must be filled out</string>
    <string name="media_edit_button_label">Save Changes</string>
    <string name="camera_capture_button_label">Capture</string>
    <string name="camera_retake_button_label">Retake</string>
    <string name="face_auth_title">Facial Scan</string>
    <string name="head_shot_title">Headshot for Authentication</string>
    <string name="next_button_label">Next</string>
    <string name="auth_user_list_label">Authorized Users</string>
    <string name="auth_user_save_permissions">Save Permissions</string>
    <string name="auth_user_start_date">Start Date</string>
    <string name="auth_user_end_date">End Date</string>
    <string name="auth_user_map_label">Access Location</string>
    <string name="auth_user_coords_label">Tap to Select Coordinates</string>
    <string name="action_friends">Friends</string>
    <string name="title_friends">Friends</string>
    <string name="friend_request_done_button" >Done</string>
    <string name="start_date_empty_message">Please specify a start date</string>
    <string name="end_date_empty_message">Please specify an end date</string>
    <string name="action_logout">Log Out</string>
    <string name="user_search_empty_message">Please fill out at least one search field</string>
    <string name="media_title_empty_message">Please enter a title</string>
    <string name="media_description_empty_message">Please enter a description</string>
</resources>