<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:padding="16dp">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/loginErrorMessage"
                style="@style/formValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_error_message"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userNameLabel"
                    style="@style/formLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/username_label"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/userNameInput"
                    style="@style/formInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/userNameEmptyMessage"
                    style="@style/formValidation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_empty_message"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/passwordLabelLogin"
                    style="@style/formLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/password_label"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/passwordInput"
                    style="@style/formInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="12"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/passwordEmptyMessage"
                    style="@style/formValidation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_empty_message"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_first"
                    style="@style/formButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="80dp"
                    android:paddingRight="80dp"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/createAccountLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textColor="#2196F3"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>