<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/gold"
    tools:context=".MainActivity" >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_edit" />

    <androidx.core.widget.NestedScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfilePage">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/password_label"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="12"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/passwordInvalidMessage"
                style="@style/formValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_invalid_message"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/passwordConfirmLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/password_confirm_label"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/passwordConfirmInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="12"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/passwordConfirmInvalidMessage"
                style="@style/formValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass_confirm_invalid"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/first_name_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/firstNameDisplay"
                style="@style/profileDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <EditText
                android:id="@+id/firstNameInput"
                style="@style/profileInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/firstNameInvalidMessage"
                style="@style/formValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_invalid"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/last_name_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lastNameDisplay"
                style="@style/profileDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <EditText
                android:id="@+id/lastNameInput"
                style="@style/profileInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/lastNameInvalidMessage"
                style="@style/formValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_invalid"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/username_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/userNameDisplay"
                style="@style/profileDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <EditText
                android:id="@+id/userNameInput"
                style="@style/profileInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/userNameInvalidMessage"
                style="@style/formValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_invalid_message"
                android:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/emailDisplay"
                style="@style/profileDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <EditText
                android:id="@+id/emailInput"
                style="@style/profileInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/emailInvalidMessage"
                style="@style/formValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_invalid_message"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phoneNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/phone_number_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/phoneNumberDisplay"
                style="@style/profileDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <EditText
                android:id="@+id/phoneNumberInput"
                style="@style/profileInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/phoneNumInvalidMessage"
                style="@style/formValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_num_invalid"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gold"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:text="Save" />
        </LinearLayout>
    </LinearLayout>




</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>